--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 
 *{
-     text-align : centre ;
+     text-align : center ;
 }
 body{
     margin-left: 100px;
     margin-top: 30px;
     margin-bottom: 30px;
     /* margin-right: 20px; */
-    text-align : centre ;
+    text-align : center ;
 
 }
 h1 {
